[JRO] Visual bug-fix: post contents word-wrap
When an incredibly long word or link is provided for a post it will
continue past the edge of the post div. The `word-break` property set to
break-all will force a hard break.

Closes issue #267

--- a/app/assets/stylesheets/thredded/components/_post.scss
+++ b/app/assets/stylesheets/thredded/components/_post.scss
@@ -57,6 +57,7 @@
 &--post--content {
   font-size: 1.063rem; // 17px
   line-height: 1.65;
+  word-break: break-all;
   a {
     @extend %thredded--link;
   }
